// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ChannelIntroMessages test OFF_TOPIC Channel should match snapshot, do not show board button 1`] = `
<Fragment>
  <p
    className="channel-intro__content"
  >
    <MemoizedFormattedMessage
      defaultMessage="This is the start of {display_name}, a channel for non-work-related conversations."
      id="intro_messages.offTopic"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(Component)
    showBoardsButton={false}
    showSetHeader={false}
    usersLimit={10}
  />
</Fragment>
`;

exports[`components/post_view/ChannelIntroMessages test OFF_TOPIC Channel should match snapshot, show board button 1`] = `
<Fragment>
  <p
    className="channel-intro__content"
  >
    <MemoizedFormattedMessage
      defaultMessage="This is the start of {display_name}, a channel for non-work-related conversations."
      id="intro_messages.offTopic"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(Component)
    showBoardsButton={true}
    showSetHeader={true}
    usersLimit={10}
  />
</Fragment>
`;
